--- a/camel/todo.txt
+++ b/camel/todo.txt
@@ -1,12 +1,12 @@
 ok so things that have to be done:
 
-1, camel images (ask a friend to do that lol)
+1, friend has been asked
 
 2, class that deals with graphics (ask stackoverflow to do that lol)
 
 3, class that deals with time, resource, inventory stuff (i have to do this :( )
 
-3.1, class that does dialogue
+3.1, class that does dialogue (strain another friendship)
 
 4, class that deals with game flow control
 
